nginx/deployment.yml
# Deployment gives you reliability, scalability, and easier updates.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  namespace: nginx

spec:
