nginx/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: nginx

spec:
  selector: 
    app: nginx

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  
  type: ClusterIP
